Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "import pandas as pd  \n",
     "import numpy as np  \n",
     "import matplotlib.pyplot as plt  \n",
-    "%matplotlib inline\n"
+    "%matplotlib inline"
    ]
   },
   {
@@ -46,16 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(48, 5)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -145,15 +138,16 @@
        "4                 410  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the dataset and view head and dimensions\n",
-    "\n",
-    "# Code here"
+    "df = pd.read_csv(\"petrol_consumption.csv\")\n",
+    "# Code here\n",
+    "df.head()"
    ]
   },
   {
@@ -165,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -287,14 +281,14 @@
        "max                        0.724000          968.000000  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Describe the dataset\n",
-    "\n",
+    "df.describe()\n",
     "# Code here"
    ]
   },
@@ -309,14 +303,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.60357963, -1.30328829, -1.0988916 , -0.8425034 ],\n",
+       "       [-0.77699219, -0.01588293, -0.37336259,  0.86476369],\n",
+       "       [ 0.41329372,  0.25225253,  1.17411124, -0.77281903],\n",
+       "       [-1.27691227, -0.89309431,  0.91826499,  0.96929024],\n",
+       "       [ 1.60357963, -0.37813216, -1.34888404, -0.02371204],\n",
+       "       [ 1.60357963, -0.78122322, -1.23318506,  0.1156567 ],\n",
+       "       [-3.157564  , -0.46159155,  4.34378117, -0.1282386 ],\n",
+       "       [-0.77699219, -0.72439981,  0.41931315,  0.22018326],\n",
+       "       [ 0.41329372,  1.80069042,  2.30734142, -2.13166426],\n",
+       "       [-0.77699219,  0.36767508,  1.15000729, -0.3721339 ],\n",
+       "       [ 1.60357963, -1.03692856, -0.14506372, -0.51150264],\n",
+       "       [ 0.41329372, -2.20535991,  0.46717671,  0.08081451]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import sklearn_pandas\n",
     "# Create datasets for training and test\n",
+    "X = df.drop('Petrol_Consumption', axis=1)\n",
+    "y = df['Petrol_Consumption']\n",
     "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y)\n",
+    "mapper = sklearn_pandas.DataFrameMapper([\n",
+    "    (X.columns, StandardScaler() )])\n",
+    "# Code here\n",
     "\n",
-    "# Code here"
+    "mapper.fit(X_train, y_train)\n",
+    "mapper.transform(X_test)"
    ]
   },
   {
@@ -330,28 +356,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DecisionTreeRegressor(criterion='mse', max_depth=None, max_features=None,\n",
-       "           max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
-       "           min_impurity_split=None, min_samples_leaf=1,\n",
-       "           min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
-       "           presort=False, random_state=None, splitter='best')"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train a regression tree model with training data \n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
     "\n",
-    "\n",
+    "tree = DecisionTreeRegressor(criterion='mse')\n",
+    "tree.fit(X_train, y_train)\n",
+    "y_pred = tree.predict(X_test)\n",
     "# Code here"
    ]
   },
@@ -366,25 +380,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Absolute Error: 55.6\n",
-      "Mean Squared Error: 6286.2\n",
-      "Root Mean Squared Error: 79.28555984540942\n"
+      "Mean Absolute Error: 71.0\n",
+      "Mean Squared Error: 7758.17\n",
+      "R2 Score: 88.08\n"
      ]
     }
    ],
    "source": [
     "# Predict and evaluate the predictions\n",
-    "\n",
-    "\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error \n",
+    "print(f\"Mean Absolute Error: {round(mean_absolute_error(y_test, y_pred),2)}\")\n",
+    "print(f\"Mean Squared Error: {round(mean_squared_error(y_test, y_pred),2)}\")\n",
+    "print(f\"R2 Score: {round(np.sqrt(mean_squared_error(y_test, y_pred)),2)}\")\n",
     "# Code here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -414,7 +437,6 @@
    ],
    "source": [
     "# Visualize the decision tree using graph viz library \n",
-    "\n",
     "\n",
     "# Code here"
    ]
@@ -460,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
